--- a/src/components/UploadPageTwo/UploadPageTwo.scss
+++ b/src/components/UploadPageTwo/UploadPageTwo.scss
@@ -91,4 +91,9 @@
     margin: 0 auto;
     margin-right: 10px;
   }
+
+  &__delete-upload-container {
+    display: flex;
+    justify-content: space-around;
+  }
 }
