--- a/src/components/VideoPin/VideoPin.scss
+++ b/src/components/VideoPin/VideoPin.scss
@@ -15,7 +15,86 @@
 
   &__profile-img {
     height: 50px;
-    width: 50px;
+    width: 40px;
     border-radius: 50%;
   }
 }
+
+.content__title {
+  margin-left: 1rem;
+}
+
+.mainContainer {
+  width: 90vw;
+  flex: 1;
+  height: auto;
+  display: grid;
+  grid-template-columns: repeat(auto-fill, 300px);
+  grid-auto-rows: 10px;
+  margin-top: 15px;
+  justify-content: center;
+}
+
+.pin {
+  border-radius: 16px;
+  background: #444;
+  margin: 5px;
+  cursor: pointer;
+  position: relative;
+  overflow: hidden;
+}
+
+.pin .mainPic {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.pin.small {
+  grid-row-end: span 26;
+}
+.pin.medium {
+  grid-row-end: span 33;
+}
+.pin.large {
+  grid-row-end: span 45;
+}
+
+.pin .content {
+  width: 100%;
+  height: 80px;
+  background: rgba(255, 255, 255, 0.2);
+  position: absolute;
+  bottom: -100px;
+  left: 0;
+  border-radius: 16px;
+  backdrop-filter: blur(5px);
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.content__right {
+  margin-right: 2rem;
+}
+
+.pin:hover .content {
+  bottom: 0;
+  transition: bottom 0.3s;
+  padding: 0px 20px;
+}
+
+.pin:hover .content h3 {
+  color: #feffff;
+  font-size: 18px;
+  font-weight: 500;
+}
+
+.pin .search {
+  background: #fb3874;
+}
+
+// @media screen and (max-width: 480px) {
+//   .App {
+//     padding: 0 20px;
+//   }
