--- a/src/components/VideoPinDetails/VideoPinDetails.scss
+++ b/src/components/VideoPinDetails/VideoPinDetails.scss
@@ -1,14 +1,56 @@
-.videoDetails {
+// .videoDetails-comments-container {
+//   display: flex;
+// }
+
+// .videoDetails {
+//   display: flex;
+
+//   flex-direction: column;
+//   justify-content: center;
+
+//   align-items: center;
+
+//   &__video {
+//     position: absolute;
+//     top: 0;
+//     display: flex;
+//     justify-content: flex-start;
+//   }
+// }
+
+.video-container {
+  width: 100vw;
   display: flex;
 
-  flex-direction: column;
-  justify-content: center;
+  &__left {
+    display: flex;
+    flex-direction: column;
+    height: 100vh;
+    width: 50vw;
+    background-color: black;
+  }
 
-  align-items: center;
+  &__left-top {
+    // background-color: green;
+    // height: 70vh;
+  }
 
   &__video {
+    height: 70vh;
+    width: 70vw;
+  }
+
+  &__left-bottom {
+  }
+
+  &__video-lists {
     display: flex;
-    justify-content: center;
-    align-items: center;
+  }
+
+  &__right {
+    overflow: scroll;
+    color: black;
+    height: 100vh;
+    width: 25vw;
   }
 }
