--- a/src/components/VideoPinDetails/VideoPinDetails.scss
+++ b/src/components/VideoPinDetails/VideoPinDetails.scss
@@ -47,6 +47,10 @@
 
   &__left-bottom {
   }
+  &__left-bottom-img {
+    max-width: 50px;
+    height: 50px;
+  }
 
   &__video-lists {
     display: flex;
