--- a/src/components/Channels/Channel.scss
+++ b/src/components/Channels/Channel.scss
@@ -2,3 +2,16 @@
   margin-top: 1rem;
   margin-left: 3rem;
 }
+
+.search {
+  &__search {
+    border-radius: 20px;
+    border: 1px solid grey;
+    padding: 0.8rem 1.6rem;
+    background: url("../../assets/Icons/search.svg") no-repeat 95% 50%;
+    // @include tablet {
+    width: 27.4rem;
+    margin-top: 1rem;
+    // }
+  }
+}
