--- a/src/components/Profile/Profile.scss
+++ b/src/components/Profile/Profile.scss
@@ -1,5 +1,27 @@
 .profile {
   width: 90vw;
+
+  &__background-img {
+    background: white;
+    background-image: url("https://images.pexels.com/photos/1731427/pexels-photo-1731427.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260");
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+    height: 250px;
+  }
+
+  &__img-container {
+    border-bottom: 2px black solid;
+    margin-left: 2rem;
+  }
+
+  &__img {
+    width: 200px;
+    height: 200px;
+    margin-top: -120px;
+    border-radius: 100px;
+    border: 4px solid #fff;
+  }
 }
 
 .button-contact {
