--- a/src/components/UploadPageTwo/UploadPageTwo.scss
+++ b/src/components/UploadPageTwo/UploadPageTwo.scss
@@ -40,7 +40,7 @@
 
   textarea,
   input {
-    color: white;
+    color: black;
     width: 100%;
     border: 1px solid black;
     border-radius: 4px;
