--- a/src/components/VideoPinDetails/VideoPinDetails.scss
+++ b/src/components/VideoPinDetails/VideoPinDetails.scss
@@ -36,7 +36,8 @@
   }
 
   &__left-bottom {
-    background-color: beige;
+    background-color: white;
+    border: 5px solid black;
     height: 100vh;
   }
 
@@ -57,9 +58,10 @@
   }
 
   &__right {
+    border: 5px solid black;
     overflow: scroll;
     color: black;
-    height: 90vh;
-    width: 25vw;
+    height: 100vh;
+    width: 24vw;
   }
 }
