--- a/src/components/VideoPin/VideoPin.scss
+++ b/src/components/VideoPin/VideoPin.scss
@@ -35,6 +35,11 @@
   justify-content: center;
 }
 
+.column {
+  width: 50vw;
+  grid-template-columns: repeat(auto-fill, 10px);
+}
+
 .pin {
   border-radius: 16px;
   background: #444;
@@ -98,3 +103,45 @@
 //   .App {
 //     padding: 0 20px;
 //   }
+
+////////////////////////////// quilt
+.no-pin {
+  display: flex;
+  margin: 20px;
+}
+
+.no-mainPic {
+  width: 300px;
+  display: flex;
+}
+
+.NoContent {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  margin-left: 20px;
+
+  &__profile-img {
+    max-width: 20px;
+    display: none;
+  }
+
+  &__title {
+    margin: 0;
+  }
+
+  &__right {
+    display: flex;
+  }
+
+  &__time {
+    font-size: 10px;
+    padding-top: 110px;
+  }
+
+  &__like {
+    position: relative;
+    padding-top: 1px;
+    left: -100px;
+  }
+}
