--- a/src/components/UploadPageTwo/UploadPageTwo.scss
+++ b/src/components/UploadPageTwo/UploadPageTwo.scss
@@ -20,6 +20,7 @@
     border-bottom: 1px solid gray;
     border-top: 1px solid gray;
     padding: 20px 0;
+    background-color: #e1e1e1;
   }
   &__image {
     display: flex;
@@ -41,10 +42,10 @@
   textarea,
   input {
     color: black;
-    width: 100%;
+    width: 91%;
     border: 1px solid black;
     border-radius: 4px;
-    background-color: #e1e1e1;
+    background-color: #fafafa;
     padding: 16px;
   }
   &:focus {
