--- a/src/components/VideoPin/VideoPin.scss
+++ b/src/components/VideoPin/VideoPin.scss
@@ -111,7 +111,8 @@
 }
 
 .no-mainPic {
-  width: 300px;
+  max-width: 300px;
+
   display: flex;
 }
 
@@ -122,7 +123,7 @@
   margin-left: 20px;
 
   &__profile-img {
-    max-width: 20px;
+    max-width: 10px;
     display: none;
   }
 
@@ -141,7 +142,8 @@
 
   &__like {
     position: relative;
-    padding-top: 1px;
-    left: -100px;
+    left: -380px;
+    bottom: 30px;
+    padding-left: 5px;
   }
 }
