--- a/src/components/People/People.scss
+++ b/src/components/People/People.scss
@@ -5,8 +5,8 @@
   justify-content: center;
   background: white;
   width: 200px;
-  margin-bottom: 10px;
-  border-radius: 20px;
+  margin-bottom: 1rem;
+  border-radius: 2rem;
   padding: 1rem 6rem 2rem 5rem;
 
   &__name {
@@ -21,19 +21,20 @@
   &__image {
     border-radius: 50%;
     width: 50%;
-    height: 70px;
+    height: 5rem;
   }
 
   &__msg {
     @include form-button-blue;
     background-image: url("../../assets/Icons/message.svg");
     background-repeat: no-repeat;
-    background-position: 12px;
-    margin-bottom: 20px;
+    background-position: 1.2rem;
+    margin-bottom: 1rem;
   }
 
   &__msg {
-    height: 30px;
+    margin-top: 1rem;
+    height: 2rem;
   }
 
   &__videos-info {
