--- a/src/components/Profile/Profile.scss
+++ b/src/components/Profile/Profile.scss
@@ -11,7 +11,7 @@
   }
 
   &__img-container {
-    border-bottom: 2px black solid;
+    border-bottom: 0.2rem black solid;
     margin-left: 2rem;
   }
 
@@ -19,7 +19,7 @@
     width: 200px;
     height: 200px;
     margin-top: -120px;
-    border-radius: 100px;
+    border-radius: 10rem;
     border: 4px solid #fff;
   }
 }
@@ -28,7 +28,7 @@
   border: none;
   outline: 0;
   display: inline-block;
-  padding: 8px;
+  padding: 0.3rem;
   color: white;
   background-color: #000;
   text-align: center;
@@ -39,7 +39,7 @@
 
 a {
   text-decoration: none;
-  font-size: 22px;
+  font-size: 2rem;
   color: black;
 }
 
