--- a/src/components/Upload/Upload.scss
+++ b/src/components/Upload/Upload.scss
@@ -12,11 +12,9 @@
     height: 90%;
     border-color: 2px solid black;
     background-color: white;
-    border-radius: 4px;
+    border-radius: 4rem;
     display: flex;
     flex-direction: column;
-    // align-items: center;
-    // justify-content: center;
     gap: 5rem;
   }
 
@@ -41,7 +39,7 @@
 
   &__form-location {
     width: 100%;
-    height: 25px;
+    height: 2.5rem;
   }
 
   //dash selector
