--- a/src/components/commentItem/CommentItem.scss
+++ b/src/components/commentItem/CommentItem.scss
@@ -6,7 +6,7 @@
   &__header {
     display: flex;
     justify-content: space-between;
-    padding-left: 25px;
+    padding-left: 1.5rem;
     &--image-one {
       height: 48px;
       width: 48px;
